--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pick-prop",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Randomly sampling a property from an object.",
   "main": "index.js",
   "scripts": {
@@ -36,12 +36,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bubkoo/pick-prop.git"
+    "url": "git+https://github.com/mock-end/pick-prop.git"
   },
   "bugs": {
-    "url": "https://github.com/bubkoo/pick-prop/issues"
+    "url": "https://github.com/mock-end/pick-prop/issues"
   },
-  "homepage": "https://github.com/bubkoo/pick-prop#readme",
+  "homepage": "https://github.com/mock-end/pick-prop#readme",
   "devDependencies": {
     "jshint": "^2.9.1",
     "chai": "^3.5.0",
